# standard_knowledge

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  noxfile.py  renovate.disabled.json  renovate.json  ruff.toml
.github/: copilot-instructions.md  dependabot.yml  release.yml  zizmor.yaml
.github/workflows/: copilot-setup-steps.yml  javascript.yml  pre-commit.yml  python.yml  rust.yml  wasm-build-deploy.yml
cli/: Cargo.toml
cli/tests/cmd/: filter-search-xarray.toml  filter-search.toml  filter-var.toml  get-with-tests.toml  get.toml  knowledge-lib-and-url.toml
core/: Cargo.toml  build.rs
core/src/: cf.rs  knowledge_include.rs  library_knowledge.rs  main.rs  standard.rs  standards_library.rs
core/standards/: _cf_standards.yaml  acoustic_signal_roundtrip_travel_time_in_sea_water.yaml  acoustic_volume_backscattering_strength_in_sea_water.yaml  air_density.yaml  air_potential_temperature.yaml  air_pressure.yaml  air_pressure_anomaly.yaml  air_pressure_at_cloud_top.yaml  air_pressure_at_mean_sea_level.yaml  air_temperature.yaml  air_temperature_anomaly.yaml  air_temperature_at_cloud_top.yaml  altimeter_range.yaml  altitude.yaml  angle_of_rotation_from_east_to_x.yaml  angstrom_exponent_of_ambient_aerosol_in_air.yaml  atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles.yaml  atmosphere_boundary_layer_thickness.yaml  atmosphere_convective_available_potential_energy.yaml  atmosphere_mass_content_of_cloud_liquid_water.yaml  atmosphere_mass_content_of_water.yaml  atmosphere_mass_content_of_water_vapor.yaml  atmosphere_optical_thickness_due_to_cloud.yaml  attenuated_signal_test_quality_flag.yaml  barotropic_eastward_sea_water_velocity.yaml  barotropic_northward_sea_water_velocity.yaml  barotropic_sea_water_x_velocity.yaml  barotropic_sea_water_y_velocity.yaml  beam_consistency_indicator_from_multibeam_acoustic_doppler_velocity_profiler_in_sea_water.yaml  biological_taxon_lsid.yaml  biological_taxon_name.yaml  cell_area.yaml  cell_thickness.yaml  climatology_test_quality_flag.yaml  cloud_area_fraction.yaml  cloud_base_altitude.yaml  cloud_binary_mask.yaml  concentration_of_colored_dissolved_organic_matter_in_sea_water.yaml  concentration_of_colored_dissolved_organic_matter_in_sea_water_expressed_as_equivalent_mass_fraction_of_quinine_sulfate_dihydrate.yaml  convective_cloud_area_fraction.yaml  (+352 more)
js/: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
js-data-pkg/: .gitignore  package-lock.json  package.json
js-data-pkg/scripts/: build.mjs
js/scripts/: gen-data.mjs
js/src/: lib.rs
js/tests/: api.test.ts  pack-smoke.mjs  web.rs
js/tests/e2e/: demo.spec.ts
py/: Cargo.toml  README.md  Readme.md  pyproject.toml
py/src/: lib.rs  standards_filter.rs
py/tests/: test_standards_library.py
utils/: error_on_duplicate_variables.py  find_standards_app.py  generate_partitions.py  update_standards.py
