[workspace]
resolver = "2"
members = [ "cli", "core", "js", "py"]

[workspace.package]
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/ioos/standard_knowledge/"
readme = "README.md"
description = "Programmatically augmenting CF Standards with operational knowledge."
edition = "2021"
rust-version = "1.85"
