[package]
name = "standard_knowledge_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "standard_knowledge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
serde_yaml_ng = "0.10.0"
standard_knowledge = { path = "../core" }
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
trycmd = "0.15.10"
