[package]
name = "standard_knowledge_js"
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
standard_knowledge = { path = "../core", version = "0.1.1" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.5"
indicium = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
