[package]
name = "standard_knowledge_py"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_standard_knowledge_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.0"
standard_knowledge = { path = "../core" }
dyn-clone = "1.0.20"
indicium = "0.6.5"
