[package]
name = "standard_knowledge_py"
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "Readme.md"
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_standard_knowledge_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
standard_knowledge = { path = "../core", version = "0.1.0" }
dyn-clone = "1.0.20"
indicium = "0.6.5"
