[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "standard_knowledge"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "Readme.md"
description = "Programmatically augmenting CF Standards with operational knowledge."
license = "Apache-2.0"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "standard_knowledge._standard_knowledge_py"
python-source = "python"
exclude = ["Readme.md"]


[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "src/**/*.rs"}, {file = "python/**/*.py"}, {file = "../core/standards/*.yaml"}, {file = "../core/src/**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.cibuildwheel]
# Run the package tests using `pytest` after building wheels
test-groups = ["dev"]
test-command = "python -m pytest {project}/py/tests -xv"
